--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -8,4 +8,5 @@ COPY . .
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 EXPOSE 8000
-ENTRYPOINT ["sh", "-c", "gunicorn app:app --workers 2 --bind 0.0.0.0:8000"]
+CMD ["gunicorn", "app:app", "--workers", "2", "--bind", "0.0.0.0:8000"]
+
