--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,6 +23,7 @@ jobs:
 
       SERVER_USER: ${{ secrets.SERVER_USER }}
       SERVER_IP: ${{ secrets.SERVER_IP }}
+      SERVER_PORT: ${{ secrets.SERVER_PORT }}
 
       CONTAINER_NAME: ${{ vars.CONTAINER_NAME }}
       EXPOSED_PORT: ${{ vars.EXPOSED_PORT }}
